# tp_perceptron

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/: Helper.cpp  Helper.hpp  Stats.cpp  Stats.hpp
src/: Neurone.cpp  Neurone.hpp  Neuronne.cpp  Neuronne.hpp
